# madg-what

./: .gitignore  .gitmodules  README.md  makefile
filter/: kriswiner_impl-refac1.c  kriswiner_impl-refac2.c  kriswiner_impl-refac3.1.c  kriswiner_impl-refac3.c  kriswiner_impl-refac4.1.c  kriswiner_impl-refac4.c  kriswiner_impl-refac5.1.c  kriswiner_impl-refac5.c  kriswiner_impl-refac6.1.c  kriswiner_impl-refac6.c  kriswiner_impl.c  madgwick_filter.h  makefile
madg-what-fuzzer/: Cargo.toml
madg-what-fuzzer/src/: main.rs
madg-what-fuzzer/src/quaternion/: mod.rs
